[tool.poetry]
name = "CloverAI"
version = "0.1.0"
description = "AI Governance Framework"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"
scikit-learn = "^1.0.0"
aif360 = "^0.5.0"
diffprivlib = "^0.5.0"
cryptography = "^3.4.0"
pyyaml = "^5.4.0"
kubernetes = "^23.6.0"
prometheus-client = "^0.12.0"
rich = "^10.12.0"
click = "^8.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pytest-cov = "^2.12.0"
black = "^22.3.0"
isort = "^5.10.0"
flake8 = "^4.0.0"
sphinx = "^4.5.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"